[tool.poetry]
name = "codeware"
version = "0.1.0"
description = ""
authors = ["KhushalJangid <kjangid897@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.2.8"
requests = "^2.32.5"
whitenoise = "^6.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
