[tool.poetry]
name = "codeware"
version = "0.1.0"
description = ""
authors = ["KhushalJangid <kjangid897@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.2.8"
requests = "^2.32.5"
whitenoise = "^6.11.0"
djangorestframework = "^3.16.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "django-stubs (>=5.2.7,<6.0.0)",
    "djangorestframework-types (>=0.9.0,<0.10.0)"
]
